--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
+sudo: required
 
+language: python
+
+services:
+  - docker
+
+before_install:
+  - docker build docker/ -t telegram-bot
+  - docker run -d -p 8443:8443 -v /data/:/data/ telegram-bot bot.py
