--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ services:
 
 before_install:
   - docker build docker/ -t telegram-bot
-  - docker run -d -p 8443:8443 -v /data/:/data/ telegram-bot bot.py
+  - docker run -d -p 8443:8443 -v /data/:/data/ telegram-bot bot.py $token
