--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ sudo: required
 services:
   - docker
 
-before_install:
+script:
   - docker build docker/ -t telegram-bot
   - docker run -d -p 8443:8443 -v /data/:/data/ telegram-bot bot.py $token
